--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-Hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Dug's Game</title>
+    <style>
+      canvas {
+        border: 1px solid #d3d3d3;
+        background-color: #18992a;
+      }
+    </style>
+  </head>
+
+  <body onload="startGame()">
+      <script>
+
+        function startGame() {
+          myGamePiece = new component(120, 120, "red", 175, 75, "rect");
+
+          rambo = new component(480, 200, "rambo.gif", 480, 200, "image");
+          myGameArea.start();
+      }
+
+        function component(width, height, color, x, y, type) {
+          this.width = width;
+          this.height = height;
+          this.color = color;
+          this.x = x;
+          this.y = y;
+          this.type = type;
+
+          if(this.type == "image") {
+              this.img = document.createElement('img');
+              this.img.src = color;
+              this.img.alt = "could not display";
+
+          }
+
+        this.crashWith = function (otherobj) {
+            var myleft = this.x;
+            var myright = this.x + (this.width);
+            var mytop = this.y;
+            var mybottom = this.y + (this.height);
+            var otherleft = otherobj.x;
+            var otherright = otherobj.x + (otherobj.width);
+            var othertop = otherobj.y;
+            var otherbottom = otherobj.y + (otherobj.height);
+            var crash = true;
+            if ((mybottom < othertop) || (mytop > otherbottom) || (myright < otherleft) || (myleft > otherright)) {
+                crash = false;
+            }
+            return crash;
+        }
+
+      this.update = function() {
+          ctx = myGameArea.context;
+
+          if(this.type == "rect") {
+            ctx.fillStyle = color;
+            ctx.fillRect(this.x, this.y, this.width, this.height);
+          }
+
+          else if(this.type == "image") {
+             ctx.drawImage(this.img, this.x, this.y, this.width, this.height);
+         }
+       }
+      }
+
+        var myGameArea = {
+          canvas: document.createElement("canvas"),
+          start: function() {
+            this.canvas.width = 1600;
+            this.canvas.height = 850;
+            this.context = this.canvas.getContext("2d");
+            document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+
+            this.frameNo = 0;
+            this.interval = setInterval(updateGameArea, 20);
+          },
+          clear: function() {
+            this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
+          }
+        }
+        function updateGameArea() {
+          myGameArea.clear();
+          myGamePiece.update();
+          rambo.update();
+
+        }
+
+        function checkKey(e) {
+          if(e.keyCode == '38') {
+            myGamePiece.y -= 1;
+          }
+        }
+          document.onkeydown = checkKey;
+          //paper instructions//
+
+      </script>
+  </body>
+
+  <h3>what's up mike</h3>
+
+</html>
