--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       canvas {
         border: 1px solid #d3d3d3;
-        background-color: #18992a; {
+        background-color: #18992a;
       }
     </style>
   </head>
